# IPC

./: .gitignore  Dockerfile  Dockerfile.test  LICENSE  README.md  SKILL.md  capture_portal_auth.py  pyproject.toml
.github/workflows/: publish.yml
IPC/: IPC.psd1  IPC.psm1
cli/: Start-IPC.ps1
src/: IPCSkill.psd1  IPCSkill.psm1  Start-IPCSkill.ps1
src/ipc_skill/: __init__.py  broci_token_provider.py  cli.py  config.py  graph_client.py  ibiza_token_provider.py  ipc_explorer.py  keyring_token_store.py  local_token_store.py  token_manager.py  wam_token_provider.py
src/ipc_skill.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: IPC.Tests.ps1  IPCSkill.Tests.ps1  Vault.Tests.ps1  conftest.py  test_ipc_explorer.py  test_token_manager.py
